--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "npm-run-all --parallel nest:start:dev fb:serve",
+    "deploy": "npm-run-all nest:build fb:deploy",
+    "nest:prebuild": "rimraf dist",
+    "nest:build": "nest build",
+    "nest:start": "nest start",
+    "nest:start:dev": "nest start --watch",
+    "nest:start:debug": "nest start --debug --watch",
+    "nest:start:prod": "node dist/main",
+    "fb:build": "tsc",
+    "fb:serve": "firebase serve --only functions",
+    "fb:shell": "firebase functions:shell",
+    "fb:start": "npm run fb:shell",
+    "fb:deploy": "firebase deploy --only functions",
+    "fb:logs": "firebase functions:log",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +31,9 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
+    "firebase-functions": "^3.13.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
@@ -41,7 +51,9 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "firebase-functions-test": "^0.2.3",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
@@ -66,5 +78,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "main": "dist/main.js",
+  "engines": {
+    "node": "12"
   }
 }
