--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-{
+ {
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
@@ -6,10 +6,16 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es5",
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true
+    "baseUrl": ".",
+    "incremental": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node"
   }
 }
