--- a/package.json
+++ b/package.json
@@ -6,16 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nodemon --exec ts-node src/server.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start": "nodemon --exec ts-node src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,10 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -36,43 +24,14 @@
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "firebase-functions-test": "^0.2.3",
-    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   },
   "main": "dist/main.js",
   "engines": {
